# illuma-samc

./: .gitignore  CHANGELOG.md  CITATION.bib  CLAUDE.md  LICENSE  README.md  STATUS.md  TODO.md  WORKLOG.md  compare_results.py  mh_vs_samc.ipynb  publish.sh  pyproject.toml  sample_code.py  single_vs_population.ipynb  train.py
.github/workflows/: ci.yml
ablation/: analyze.py  analyze_robust_bins.py  analyze_robust_defaults.py  robust_defaults.py  run_10d_ablations.py  run_2d_ablations.py  run_cross_comparison.py  run_growing_partition_ablation.py  run_rastrigin_ablations.py  run_robust_bins_ablation.py  run_rosenbrock_ablations.py  sweep.py
ablation/reports/: 10d_insights.md  2d_insights.md  cross_comparison.csv  final_comparison.md  growing_partition_insights.md  rastrigin_insights.md  robust_bins_insights.md  robust_defaults.md  rosenbrock_insights.md
ablation/results/growing_partition/: results.json
benchmarks/: debug_10d.py  plot_benchmark.py  run_benchmark.py  run_mh.py  run_pt.py  run_samc.py  three_way.py  vs_mh_pt.py
benchmarks/results/: mh.pt  pt_2rep.pt  pt_4rep.pt  pt_8rep.pt  samc.pt
configs/: mh.yaml  pt.yaml  samc.yaml
docs/: api.rst  conf.py  faq.rst  how_it_works.rst  index.rst  installation.rst  quickstart.rst  tuning.rst
docs/tutorials/: bayesian.rst  drop_in.rst  multi_chain.rst
examples/: comparison_sample_code.py  demo_showcase.py  gaussian_mixture.py  mh_vs_samc.ipynb  multimodal_2d.py
reference/: sample_code.py
scripts/: watch_todo.sh
src/illuma_samc/: __init__.py  analysis.py  config.py  diagnostics.py  gain.py  partitions.py  proposals.py  sampler.py  weight_manager.py
src/illuma_samc/baselines/: __init__.py  metropolis_hastings.py  parallel_tempering.py
src/illuma_samc/problems/: __init__.py  gaussian_100d.py  gaussian_10d.py  gaussian_50d.py  multimodal_2d.py  rastrigin_20d.py  rosenbrock_2d.py
tests/: test_config.py  test_diagnostics.py  test_gain.py  test_mps.py  test_partitions.py  test_placeholder.py  test_proposals.py  test_sampler.py  test_weight_manager.py
